[gd_scene load_steps=14 format=3 uid="uid://cka0gycinnaq1"]

[ext_resource type="Script" path="res://LaserShotgunTurret.gd" id="1_2mqeq"]
[ext_resource type="PackedScene" uid="uid://5q1chrrp83rm" path="res://Shootable.tscn" id="1_2n05d"]
[ext_resource type="Shader" path="res://HitFlash.gdshader" id="1_l70uu"]
[ext_resource type="PackedScene" uid="uid://cg0ec8jkbxaxc" path="res://Meleeable.tscn" id="2_3r31s"]
[ext_resource type="PackedScene" uid="uid://dwi25fesc1esk" path="res://DeathDelay.tscn" id="2_vj6h5"]
[ext_resource type="Texture2D" uid="uid://cs6rgi45oqjmo" path="res://Assets/laser_shotgun_gun.png" id="2_yrhid"]
[ext_resource type="Script" path="res://Projectile/ProjectileManager.gd" id="3_0qyeo"]
[ext_resource type="Texture2D" uid="uid://dipyv4tbujgmr" path="res://Assets/shotgun_turret_base.png" id="3_nra3s"]
[ext_resource type="Resource" uid="uid://c6j3hoksfcsh5" path="res://Projectile/EnemyProjectiles/EnemyLaserShot.tres" id="5_3ni45"]
[ext_resource type="PackedScene" uid="uid://dlwc6u5k8g6eq" path="res://HitFlashHandler.tscn" id="9_s41ue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mp070"]
size = Vector2(256, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ufj5l"]
resource_local_to_scene = true
shader = ExtResource("1_l70uu")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qrrg"]
shader = ExtResource("1_l70uu")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[node name="LaserShotgunTurret" type="StaticBody2D"]
script = ExtResource("1_2mqeq")
MachineTitle = "M5-PHONEIX"

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mp070")

[node name="Destruction" parent="." instance=ExtResource("2_vj6h5")]
Delay = 3.0

[node name="GunCooldown" type="Timer" parent="."]

[node name="FullBody" type="Node2D" parent="."]

[node name="Base" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_ufj5l")
texture = ExtResource("3_nra3s")

[node name="Cannon" type="Sprite2D" parent="FullBody"]
material = SubResource("ShaderMaterial_7qrrg")
texture = ExtResource("2_yrhid")

[node name="Muzzle" type="Marker2D" parent="FullBody/Cannon"]
position = Vector2(120, 0)

[node name="LaserShotgun" type="Node2D" parent="."]
script = ExtResource("3_0qyeo")
ShotData = ExtResource("5_3ni45")
MaxPool = 100

[node name="Shootable" parent="." node_paths=PackedStringArray("Collider") instance=ExtResource("1_2n05d")]
CollisionType = 2
Collider = NodePath("..")

[node name="Meleeable" parent="." instance=ExtResource("2_3r31s")]

[node name="HitFlashHandler" parent="." instance=ExtResource("9_s41ue")]
Duration = 0.25
